<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/my_orders" />

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        android:title="@string/order" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/alerts" />

    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account"
        android:title="@string/account"/>
</menu>