<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectorActivity"
    android:background="@color/white"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout


                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="340dp">
                        <TextView
                            android:textSize="25sp"
                            android:elevation="10dp"
                            android:textStyle="bold"
                            android:layout_gravity="top"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="70dp"
                            android:textColor="@color/white"
                            android:text="Welcome text/animation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimary"/>
                    </FrameLayout>

                    <LinearLayout

                        android:elevation="20dp"
                        android:layout_marginTop="200dp"
                        android:background="@drawable/login_background_curved"
                        android:layout_width="match_parent"
                        android:backgroundTint="@color/white"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_height="wrap_content">
                            <View
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginTop="10dp"
                                android:layout_width="28dp"
                                android:layout_height="4dp"
                                android:backgroundTint="@color/colorPrimary"
                                android:background="@drawable/bottom_popup_top_span"
                                android:layout_gravity="center_horizontal" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView

                            android:layout_marginTop="25dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:layout_gravity="center"
                            android:text="@string/select_category_to_continue"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                        <LinearLayout
                            android:layout_marginTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="25dp"
                            android:paddingEnd="25dp">
                            <LinearLayout
                                android:id="@+id/btnCustomer"
                                android:clickable="true"
                                android:focusable="true"
                                android:padding="10dp"
                                android:background="@drawable/grey_curved_filled"

                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:orientation="horizontal">
                                <ImageView
                                    android:layout_marginStart="5dp"
                                    android:src="@drawable/ic_customer"
                                    android:layout_gravity="center"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    app:tint="@color/white" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="10dp"
                                    android:text="@string/customer"
                                    android:textColor="@color/white"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                            <TextView
                                android:layout_marginTop="8dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:layout_marginEnd="1dp"
                                android:gravity="start|center_vertical"
                                android:layout_width="wrap_content"
                                android:drawableTint="@color/darker_gray"
                                android:layout_height="wrap_content"
                                android:text="@string/who_is_a_customer"
                                android:drawablePadding="4dp"
                                android:drawableRight="@drawable/ic_help"
                                android:textColor="@color/darker_gray"
                                android:textStyle="bold"
                                android:layout_marginBottom="20dp"
                                android:textSize="13sp"/>
                            <LinearLayout
                                android:id="@+id/btnSalesAgent"
                                android:clickable="true"
                                android:focusable="true"
                                android:layout_marginTop="10dp"
                                android:padding="10dp"
                                android:background="@drawable/grey_curved_filled"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:orientation="horizontal">


                                <ImageView
                                    android:layout_marginStart="5dp"
                                    app:tint="@color/white"
                                    android:src="@drawable/ic_sales_agent"
                                    android:layout_gravity="center"
                                    android:layout_width="26dp"
                                    android:layout_height="26dp"/>
                                <TextView
                                    android:layout_marginStart="10dp"
                                    android:layout_gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sales_agent"
                                    android:textSize="16sp"
                                    android:textStyle="bold"
                                    android:textColor="@color/white"/>
                            </LinearLayout>
                            <TextView
                                android:layout_marginTop="8dp"
                                android:clickable="true"
                                android:focusable="true"
                                android:layout_marginEnd="1dp"
                                android:gravity="start|center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/who_is_an_agent"
                                android:drawablePadding="4dp"
                                android:drawableTint="@color/darker_gray"
                                android:drawableRight="@drawable/ic_help"
                                android:textColor="@color/darker_gray"
                                android:textStyle="bold"
                                android:layout_marginBottom="30dp"
                                android:textSize="13sp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="2dp"
                            android:layout_gravity="center"
                            android:gravity="bottom"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/read_our"
                                android:textColor="@color/darker_gray"
                                android:textStyle="bold"
                                android:textSize="13sp"/>
                            <TextView

                                android:clickable="true"
                                android:focusable="true"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="1dp"
                                android:gravity="start|center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:text="@string/terms_and_conditions"
                                android:textColor="@color/colorPrimaryDark"
                                android:textStyle="bold"
                                android:textSize="13sp"/>
                            <TextView
                                android:layout_marginStart="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/and"
                                android:textColor="@color/darker_gray"
                                android:textStyle="bold"
                                android:textSize="13sp"/>

                            <TextView
                                android:clickable="true"
                                android:focusable="true"
                                android:layout_marginStart="6dp"
                                android:gravity="start|center_vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:text="@string/privacy_policy"
                                android:textColor="@color/colorPrimaryDark"
                                android:textStyle="bold"
                                android:textSize="13sp"/>

                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>







</LinearLayout>